# advisory_replit

./: .dockerignore  .env  .replit  AI_ENHANCE_FEATURE.md  ANALISE_DESIGN_RECOMENDACOES.md  COMO_ACESSAR.md  COMO_ACESSAR_PRODUCAO.md  COMO_DELETAR_CONVERSAS.md  COMO_USAR.md  CONSELHO_ESTRATEGICO_10-10.md  CORRECAO_ESPECIALISTAS_NAO_APARECEM.md  CORRECAO_ESPECIALISTAS_PERSONALIZADOS.md  CORRECAO_PORT_E_CONTAINER.md  CORRECAO_SISTEMA_RECOMENDACAO.md  CORRECOES_AVATAR_E_ANALYTICS.md  CORRECOES_FINAIS.md  CORRIGIR_DEPLOY.md  CREDENCIAIS_LOGIN.md  CREDENCIAIS_TESTE.md  DEPLOY_DOKPLOY.md  DEPLOY_NETLIFY.md  DEPLOY_REPLIT.md  DIAGNOSTICO_BAD_GATEWAY.md  DIAGNOSTICO_BAD_GATEWAY_FINAL.md  DIAGNOSTICO_LOGIN.md  DOCKER_COMPOSE.md  Dockerfile  ENRICH MENT_COMPLETO_FINAL.md  ENRICHMENT_CORRIGIDO_SUCESSO.md  ENV_VARIABLES.md  FEATURE_DELETE_HISTORICO.md  GUIA_PERSONAS_PASSO_A_PASSO.md  GUIA_TESTE_PERSONAS.md  HISTORICO_CONVERSAS.md  INICIAR_SISTEMA.sh  INTEGRACAO_PERSONA_COMPLETA_IMPLEMENTADA.md  MELHORIAS_IMPLEMENTADAS_10-10.md  PERPLEXITY_INTEGRATION.md  PLANO_INTEGRACAO_PERSONA_COMPLETA.md  PRIORIDADES_DEPLOY.md  (+49 more)
attached_assets/: Pasted--Implementation-of-the-Seth-Godin-cognitive-clone-from-future-import-annotations-import--1762288370101_1762288370102.txt
client/: index.html
python_backend/: .coverage  __init__.py  analytics.py  anthropic_client.py  cache.py  circuit_breaker.py  crew_agent.py  crew_council.py  criar_usuario_teste.py  db_pool.py  env_validator.py  file_validator.py  llm_router.py  logger.py  main.py  main.py.broken  main.py.new2  models.py  perplexity_research.py  (+10 more)
(+102 files in other folders)
